# odometry-fusion

./: .dockerignore  .gitignore  Dockerfile  README.md
.circleci/: config.yml
plots/: plot_path.py
src/: .gitignore
src/odometry_optimizer/: CMakeLists.txt  EchoPublisher.cpp  EchoPublisher.h  HealthBuffer.cpp  HealthBuffer.h  IMUQueue.cpp  IMUQueue.h  IMUQueueParams.h  ISAMOptimizer.cpp  ISAMOptimizer.h  OdometryMeasurement.h  Params.h  PointCloudPublisher.cpp  PointCloudPublisher.h  PoseStampedMeasurement.h  QueuedOdometryMeasurementProcessor.cpp  QueuedOdometryMeasurementProcessor.h  QueuedPoseStampedMeasurementProcessor.cpp  QueuedPoseStampedMeasurementProcessor.h  echo_node.cpp  odometry_optimizer.cpp  package.xml  utils.cpp  utils.h
src/odometry_optimizer/cfg/: rovio_san_rafael.info  rovio_vlp16.info  san_rafael_cam.yml  vlp16_cam_left.yml  vlp16_cam_right.yml
src/odometry_optimizer/launch/: playback_failure_case_lidar.launch  playback_failure_case_rovio.launch  record.launch  record_failure_case_lidar.launch  record_failure_case_rovio.launch  record_rovio_loam_san_rafael_bag.launch  rovio_loam_san_rafael.launch  rovio_loam_san_rafael_record_for_plots.launch  rovio_loam_vlp16.launch  rovio_solution.launch  san_rafael_bag.launch  solution.launch
src/odometry_optimizer/plots/: Pipfile  loam_eigs.txt  plot.py  plot_loam_eigs.py
src/odometry_optimizer/rosbag/: .gitignore
src/odometry_optimizer/rviz_cfg/: rovio_loam_velodyne.rviz  rovio_loam_vlp16.rviz
src/odometry_optimizer/srv/: ToggleEcho.srv
src/odometry_optimizer/test/: odo_tests.cpp
src/test_solution/: CMakeLists.txt  package.xml  test_solution.cpp
src/test_solution/launch/: solution.launch
