<?xml version="1.0"?>
<package format="2">
  <name>odometry_optimizer</name>
  <version>0.0.0</version>
  <description>A package for optimizing poses given as odometry measurements with GTSAM</description>
  <maintainer email="sigurdtotland@gmail.com">sigurd</maintainer>
  <license>Unlicense</license>
  <buildtool_depend>catkin</buildtool_depend>
  <export></export>
</package>
