<?xml version="1.0"?>
<package format="2">
  <name>test_solution</name>
  <version>0.0.0</version>
  <description>A package for testing ros</description>
  <maintainer email="sigurdtotland@gmail.com">sigurd</maintainer>
  <license>Unlicense</license>
  <buildtool_depend>catkin</buildtool_depend>
  <export></export>
</package>
